[222_39] 修改macOS下的快捷键文本 (#2761)

--- a/devel/222_39.md
+++ b/devel/222_39.md
@@ -11,5 +11,6 @@ Wrong result? Use Selective Paste here.
 试试Ctrl+Shift+v，自动识别格式。
 结果不准确？请用此处的选择性粘贴。
 ```
+macOS 下的快捷键表示为Command+Shift+v
 
 ## 2026/02/04 选择性粘贴窗口添加引导信息
