--- a/devel/201_73.md
+++ b/devel/201_73.md
@@ -3,8 +3,11 @@
 ## 如何测试
 1. 新建文档，样式选择 book以及generic
 2. 点击 `插入` -> `章节`
-3. 选择 `序言`
+3. 选择 `序言`或`后记`
 4. 检查序言下方是否自动有一个空行
+5. 点击模式工具栏上的左边第一个按钮，选择 `序言`或`后记`，同意检查是否自动加空行
+
+## 2026/2/9 点击"后记"菜单后，在章节下方自动插入一个空行
 
 ## 2026/2/6
 ### What
