--- a/devel/201_68.md
+++ b/devel/201_68.md
@@ -11,4 +11,6 @@ xmake b stem ; xmake i stem ; xmake r stem
 ```
 打开201_68.tmu，按照其中的描述观察效果
 
+## 2026/02/10 修改错误的快捷键提示
+
 ## 2026/01/27 修复欢迎页面最新稳定版版本号的bad format问题
