[200_48] User-Agent and Device ID降低调用损耗 (#2817)

--- a/devel/200_48.md
+++ b/devel/200_48.md
@@ -1,6 +1,4 @@
 # [200_48] User-Agent and Device ID
-
-## 2026/02/11 添加 User-Agent and Device ID 函数
 ### 如何测试
 点击`插入交互对话`，使用`scheme`，输入：
 ```
@@ -9,6 +7,10 @@
 (stem-device-id)
 ;;期望返回类似：469709a0db73706427292c7019d41d55f64de1d965367da4206d9d952849120e
 ```
+
+## 2026/02/12 降低调用损耗
+
+## 2026/02/11 添加 User-Agent and Device ID 函数
 
 ### What
 提供 HTTP 请求所需的 User-Agent 和设备唯一标识符功能。
