[200_47] 使用 mogan logo 补充删去的texmacs-*.png (#2811)

--- a/devel/200_47.md
+++ b/devel/200_47.md
@@ -15,11 +15,16 @@
   - 本地打包
   - 安装
 
+- texmacs-*.png 验证
+  - 切换 文档样式 为 文档 -> Texmacs -> Tmdoc
+  - 输入 \tmdoc-title，查看左侧图标是否是mogan图标
+
 ## 完成情况
 - [x] macos
 - [x] windows
 - [x] linux
 
+## 2026/02/11 使用 mogan logo 补充删去的texmacs-*.png
 
 ## 2026/02/05 更换图标文件，增加linux文档图标，macos 磁盘宗卷图标
 What?
