[200_48] http请求的请求头优化 (#2820)

--- a/devel/200_48.md
+++ b/devel/200_48.md
@@ -8,6 +8,32 @@
 ;;期望返回类似：469709a0db73706427292c7019d41d55f64de1d965367da4206d9d952849120e
 ```
 
+## 2026/02/12 http请求的请求头优化
+### What
+1. 场景1: 用户认证
+    - 用户登录/刷新 token 时携带设备信息
+    - 涉及文件: src/Plugins/Qt/QTMOAuth.cpp
+      - handleAuthorizationCode(): 授权码换 token
+      - refreshToken(): 刷新 access_token
+
+2. 场景2: 获取用户信息
+    - 登录成功后拉取用户详情时携带标识
+    - 涉及文件: src/Plugins/Qt/qt_tm_widget.cpp
+      - fetchUserInfo(): 获取用户信息 API
+
+3. 场景3: 远程资源下载
+    - 文档中 <include|https://...> 远程文件时携带标识
+    - 涉及文件: src/System/Files/web_files.cpp
+      - get_from_web(): HTTP 资源下载
+
+4. 场景4: 浏览器打开链接
+    - 暂不处理（外部浏览器无法控制 HTTP header）
+
+5.  改动总结
+    - 新增 3 个文件的 HTTP header 注入
+    - 使用统一的 stem_user_agent() 和 stem_device_id()
+    - 共新增约 10 行代码
+
 ## 2026/02/12 降低调用损耗
 
 ## 2026/02/11 添加 User-Agent and Device ID 函数
