--- a/devel/200_21.md
+++ b/devel/200_21.md
@@ -10,6 +10,11 @@ xmake run stem
 ./bin/bump_goldfish v17.11.xx
 ```
 
+## 2026/02/13 升级到Goldfish Scheme v17.11.26
+
+### what
+Bump version v17.11.26
+
 ## 2026/02/03 升级到Goldfish Scheme v17.11.25
 ### what
 Bump version v17.11.25
