--- a/devel/204_29.md
+++ b/devel/204_29.md
@@ -5,31 +5,44 @@
   - xmake b table_performance_test
   - xmake r table_performance_test
 
+## 2026/02/24 表格性能测试补充和调整
+- 现在每次测试前都会清空缓存
+
 ## 2026/02/22 表格性能测试
 
-### 性能测试结果 (2026-02-22)
+### 性能测试结果 (2026-02-24)
 
 | 测试项目 | 时间 (μs) | 备注 |
 |---------|----------|------|
 | **基础表格测试** | | |
-| 1×1 文本表格 | 324 | |
-| 1×1 矩阵表格 | 72 | 矩阵单元格包含嵌套结构 |
-| 20×20 文本表格 | 1,367 | |
-| 20×20 矩阵表格 | 2,410 | 比文本表格慢约1.76倍 |
-| 100×100 文本表格 | 35,074 | |
-| 100×100 矩阵表格 | 74,337 | 比文本表格慢约2.12倍 |
+| 1×1 文本表格 | 123 | |
+| 1×1 矩阵表格 | 49 | 矩阵单元格包含嵌套结构 |
+| 20×20 文本表格 | 1,382 | |
+| 20×20 矩阵表格 | 2,401 | 比文本表格慢约1.74倍 |
+| 100×100 文本表格 | 35,292 | |
+| 100×100 矩阵表格 | 72,686 | 比文本表格慢约2.06倍 |
 | **批量创建** | | |
-| 5× 20×20 文本表格 | 6,612 | 平均每个1,322 μs |
-| 5× 20×20 矩阵表格 | 12,421 | 平均每个2,484 μs |
+| 5× 20×20 文本表格 | 6,415 | 平均每个1,283 μs |
+| 5× 20×20 矩阵表格 | 12,262 | 平均每个2,452 μs |
 | **Eqnarray测试** | | |
-| Eqnarray 1行 | 76 | |
-| Eqnarray 20行 | 133 | |
-| Eqnarray 100行 | 707 | |
-| 5× Eqnarray 20行 | 702 | 批量创建有优化 |
-| **优化测试** | | |
-| 40×40 装饰表格 (中位数) | 5,661 | 3×3 TMARKER 装饰，稀疏施加，采样5次 |
-| 40×40 普通表格 (中位数) | 5,790 | 采样5次取中位数 |
-| 装饰/普通比例 | 0.978 | 时间差小，噪声范围内 |
-| 装饰后尺寸变化 | 40×40 → 48×48 | 结构性验证装饰确实生效 |
-| 宽度缓存效率 | 1.050 | 几乎无缓存效果 |
-| 行高缓存效率 | 1.000 | 几乎无缓存效果 |
+| Eqnarray 1行 | 45 | |
+| Eqnarray 20行 | 148 | |
+| Eqnarray 100行 | 741 | |
+| 5× Eqnarray 20行 | 717 | 批量创建有优化 |
+| **装饰正确性测试** | | |
+| 装饰后尺寸变化 | 10×10 → 16×16 | 结构性验证装饰确实生效 |
+| 装饰后非空单元格 | 124 | 至少包含原始100个单元格 |
+
+### handle_decorations 压测（d 随 n 增长）
+
+| 测试项 | 中位耗时 (μs) | 归一化指标 | 备注 |
+|---|---:|---|---|
+| 20×20, d=11, decorations=100 | 353 | us/n²=0.8825, us/n⁴=0.00220625, us/(n²d²)=0.00729339 | 20×20 → 120×120 |
+| 30×30, d=15, decorations=225 | 1,709 | us/n²=1.89889, us/n⁴=0.00210988, us/(n²d²)=0.00843951 | 30×30 → 240×240 |
+| 40×40, d=21, decorations=400 | 5,340 | us/n²=3.3375, us/n⁴=0.00208594, us/(n²d²)=0.00756803 | 40×40 → 440×440 |
+| 50×50, d=25, decorations=625 | 10,963 | us/n²=4.3852, us/n⁴=0.00175408, us/(n²d²)=0.00701632 | 50×50 → 650×650 |
+
+### 结论
+
+- 这组极端构造（装饰尺寸 d 随 n 增长、且装饰密集）下，`handle_decorations` 呈现接近 `O(n^4)` 的增长趋势（`us/n^4` 基本稳定在同一量级）。
+- 但在真实使用中，`cell-decoration` 往往较小且稀疏（`d` 近似常数），此时复杂度更接近 `O(n^2)`，通常看不到 `O(n^4)` 的最坏情况。
