fix: display Command instead of Super for M- modifier on macOS

--- a/devel/202_105.md
+++ b/devel/202_105.md
@@ -11,6 +11,7 @@
 Replace "Meta" with platform-appropriate key name in keyboard shortcut notification pop-ups:
 - Linux: display "Super" instead of "Meta"
 - Windows: display "Win" instead of "Meta"
+- macOS: display "Command" instead of "Meta"
 
 ### Why
 On Linux/Windows, the `M-` modifier key is displayed as "Meta" in notification messages like "Use Meta+Tab in order to insert a tab". Modern keyboards do not have a key labeled "Meta" — on Linux the key is labeled "Super" and on Windows it is labeled "Win". This confuses users who cannot identify which key to press.
@@ -23,6 +24,8 @@ In `system_kbd_initialize` in `src/Texmacs/Server/tm_config.cpp`, changed the Qt
 ```cpp
 if (os_win ())
   h ("M-") = localize ("Win::keyboard", true);
+else if (os_macos ())
+  h ("M-") = localize ("Command::keyboard", true);
 else
   h ("M-") = localize ("Super::keyboard", true);
 ```
