[206_19] 增加测试文档 (#2871)

--- a/devel/206_19.md
+++ b/devel/206_19.md
@@ -1,9 +1,17 @@
 # 206_19 修复 Latin Modern Math 字体在数学模式下无法输入 "h" 的问题
 
 ## 如何测试
+### 手动测试
 1. 将数学模式字体设置为 Latin Modern Math
 2. 进入数学模式，输入字母 "h"
 3. 确认 "h" 能正常显示为数学斜体 h（U+210E）
+
+### 文档测试
+打开`TeXmacs/tests/tmu/206_19.tmu`就可以测试，相关的字体需要安装：
++ Asana Math
++ Stix Math
++ Latin Modern Math
++ Libertinus Math
 
 ## 2026/02/26 修复数学斜体 h 的 Unicode 映射
 ### What
